--- a/.env
+++ b/.env
@@ -4,10 +4,10 @@ PORT=3000
 
 # Database configurations
 DB_HOST=localhost
-DB_NAME=start-communication-api
+DB_NAME=devprojectapi
 DB_PORT=3306
-DB_USERNAME=admin
-DB_PASSWORD=
+DB_USERNAME=root
+DB_PASSWORD=root
 
 # JWT
 
